# harness-done-right

./: .TASKS.md.swp  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  SKILL.md  TASK2_COMPLETION.md  TASKS.md  TODO.md  pyproject.toml  pyrightconfig.json
.claude/: ralph-loop.local.md
docs/: catalog.md
docs/plan/: intro.md
docs/tasks/: coding.md  meta.md  mind.md  reveal.md  std.md
examples/academic_report/: README.md  academic_report.py  academic_report_reveal.html  academic_report_reveal.md  build_reveal.py  complete_academic_report.py
examples/build_concept_task/: concept_described.py  context.md  define_concept_described.py  description_bad1.md  description_bad2.md  description_bad3.md  description_bad4.md  description_bad5.md  description_good.md  finish_concept.py  finish_concept_described.py  forward_momentum_good.md  hdr_description.md  hdr_target_reader.md  must_force_bad.md  precision_bad.md  reader_scope_bad.md  should_force_bad.md  target_reader.md  turning_point_bad.md  turning_point_good.md  work.py
examples/build_concept_task_2/: inspiration.md
examples/build_move_task/: complete_move_chosen.py  define_move.py  define_move_chosen.py  move.py  move_chosen.py  move_support.py
examples/holomotion_report/: AGENTS.md  README.md
examples/introduction/: README.md  concept.py  define_concept.py  finish_concept.py  forward_momentum_bad.md  hdr_description.md  (+6 more)
hdr-skill/: SKILL.md  start-webui.sh  test_example.py  test_hdr.py
tests/: test_coding.py  test_core.py  test_meta.py  test_quote.py  test_reveal.py  test_std.py  test_verify.py
(+110 files in other folders)
