[project]
name = "hdr"
version = "0.1.0"
description = "Harness Done Right - Task formalization and execution framework"
readme = "SKILL.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.87.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
